--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ Jobs:
 
 
       # push the contente of <build dir> to a branch
-      # the contente will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      # the contente will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file>
+      , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
