--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-## ATENÇAO O CÓDIGO ABAIXO DEVE SER COLADO DENTRO DO MAIN.YML
-
 name: generate animation
 
 on: 
@@ -18,7 +16,7 @@ on:
 
 
 
-Jobs:
+jobs:
   generate:
     permissions:
       contentes: write
