--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ on:
 jobs:
   generate:
     permissions:
-      contentes: write
+      contents: write
     runs-on: ubuntu-latest
-    timeout-minutus: 5
+    timeout-minutes: 5
     
     steps:
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
